--- a/app/src/App.css
+++ b/app/src/App.css
@@ -2,10 +2,31 @@
   text-align: center;
 }
 
+.animation {
+  padding-left: 15%;
+  padding-top: 5%;
+  padding-right: 10%;
+  text-align: center;
+  height: 100%;
+  width: auto;
+  display: block;
+  flex: 1;
+}
+
 #form {
   text-align: left;
-  padding: 20px;
+  padding-left: 7.5%;
+  padding-top: 7.5%;
+  padding-right: 2.5%;
 }
+
+.box {
+  display: flex;
+  align-items: center;
+  flex-flow: row wrap;
+  height: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -40,3 +61,14 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes move_petr { from {
+    transform: rotate(0deg)
+               translate(15%)
+               rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg)
+               translate(15%) 
+               rotate(-360deg);
+  }  }
