--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(90deg, #ff7b5c, #ff6c81)
 }
 
 code {
